--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
       <a class="active" href="index.html">Home</a>
           </div>
 
-    <div class="onetopnavtwo">
-      <a href="page2.html">Page 2</a>
-          </div>
 
     <div class="onetopnavthree">
-      <a class="active" href="index.html">News</a>
+      <a class="active" href="pagetwo.html">News</a>
           </div>
 
     <div class="onetopnavfour">
-      <a href="page2.html">Search</a>
+      <a href="search.html">Search</a>
                   </div>
 
       <div class="onetopnavfive">
@@ -96,19 +93,20 @@
           </div>
           <div class="onesubtitle">
                 <h3>Experience the Luxury</h3>
-                    <img src="images/ugh.png"
+
           </div>
       <br/>
-              <div class="ugh"
-                    <img src="images/ugh.png">
+              <div class="ugh">
+                    <img src="images/ugh.png" width="260px" height="60px">
 
 
       <div class="ughh">
-                      <img src="images/ughh.png">
+                      <img src="images/ughh.png" width="260px" height="60px">
 </div>
 
 
-
+    </div>
+        </div>
 
     </div>
 
@@ -196,7 +194,7 @@
 
         <div id=onefooter>
           <div class="onefootertext">
-        </p>This is a footer. Say hi!</br> Made by Connor Field! 30/03/2021 at a really early hour of the morning :)</br> I've spent so many hours on this, I now have a sentimental attachment</p>
+        </p>This page was made from scratch using html and css coding</br> Made by CF for the use of my graphics project 4th May 2021</br> Refer to my google slides to see my design processes/choices</p>
       </div>
     </div>
 </div>
