--- a/pagetwo.html
+++ b/pagetwo.html
@@ -112,7 +112,7 @@
                                                             </div>
                                                     <br/>
                                                     <div class=onecontenttext>
-                                                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate </br></br>velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+                                                    <p>And spring is coming it is starting to really heat up here in the Bahamas. People outside enjoying themselves and more importantly we have just started to prepare for the festival. Equipment is starting to be shipped over as we speak and the party is nearly ready! And if you months to go until you can truly experience the festivals that you know and love. </br></br>Do you wanna support the festival? Followers in all types of social media to get instant posts and content based on the festival. See what your artists are doing to get read for the festival, and see content from previous festivals which we would like to feature in ours this year. More importantly, we will also be sharing new additions to our list on Instagram and Facebook.</p>
                                                   </div>
 
                                 </div>
@@ -124,7 +124,7 @@
 
         <div id=onefooter>
           <div class="onefootertext">
-        </p>This page was made from scratch using html and css coding</br> Made by CF for the use of my graphics project 4th May 2021</br> Refer to my google slides to see my design processes/choices</p>
+        </p>This page was made from scratch using html and css coding</br> Made by Connor for the use of my graphics project 4th May 2021</br> Refer to my google slides to see my design processes/choices</p>
 </br></br>
       </div>
     </div>
