--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
                                                             </div>
                                                     <br/>
                                                     <div class=onecontenttext>
-                                                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate </br></br>velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+                                                    <p>This festival is the festival of the future. This festival combines class with fun to create the most exhilarating experience one can think of. The location of the festival allows us to have on the doorstep views, with breathtaking weather all weekend round.
+
+</br></br>So what are you waiting for? Book a ticket now on this website, or if you'd like to find out more information that is not on the website already, please speak to one of our representatives by phone or via email.</p>
                                                   </div>
 
                                 </div>
@@ -161,7 +163,9 @@
                                                                               </div>
                                                                       <br/>
                                                                       <div class=onecontenttextT>
-                                                                      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate </br></br>velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+                                                                      <p>The artists whom feature to our festival are artists of the hyper pop and bubblegum pop genres. This includes big names like that kid, slayyyter, Carly Rae Jepson, Sophie, a.g cook and many more!
+
+</br></br>All of our artists have been confirmed for the twenty twenty one season and there are still more to come!</br></br>So what are you waiting for? Book a ticket now on this website, or if you'd like to find out more information that is not on the website already, please speak to one of our representatives by phone or via email.</p>
                                                                     </div>
 
                                                   </div>
@@ -169,11 +173,11 @@
 
                                                 <div id=onecontentx>
                                                     <div class=onecontenttitlex>
-                                                                                              <h2>About The Fest</h2>
+                                                                                              <h2>Go Check us Out!</h2>
                                     </div>
                                     <div class= "onecontentsubtitlex"
 
-                                                                                                  <h3><b>Packsaddle Cove, Bahamas</b></h3>
+                                                                                                  <h3><b>You can find us at @ wibe</b></h3>
                                                                                                   <br/>
 
                                                                                                 </div>
@@ -184,7 +188,8 @@
                                                                                                 </div>
                                                                                         <br/>
                                                                                         <div class=onecontenttextx>
-                                                                                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate </br></br>velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+                                                                                        <p>Do you wanna support the festival? Followers in all types of social media to get instant posts and content based on the festival. See what your artists are doing to get read for the festival, and see content from previous festivals which we would like to feature in ours this year. More importantly, we will also be sharing new additions to our list on Instagram and Facebook. </br></br> So what are you waiting for? Book a ticket now on this website, or if you'd like to find out more information that is not on the website already, please speak to one of our representatives by phone or via email.
+</p>
                                                                                       </div>
 
 
@@ -194,7 +199,7 @@
 
         <div id=onefooter>
           <div class="onefootertext">
-        </p>This page was made from scratch using html and css coding</br> Made by CF for the use of my graphics project 4th May 2021</br> Refer to my google slides to see my design processes/choices</p>
+        </p>This page was made from scratch using html and css coding</br> Made by Connor for the use of my graphics project 4th May 2021</br> Refer to my google slides to see my design processes/choices</p>
       </div>
     </div>
 </div>
